--- a/src/components/MusicList/index.css
+++ b/src/components/MusicList/index.css
@@ -6,7 +6,7 @@
 .image-container {
   background-image: url('https://assets.ccbp.in/frontend/react-js/music-playlist/music-playlist-Edsheeran-bg.png');
   background-size: cover;
-  height: 68vh;
+  height: 67vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -34,6 +34,8 @@
   padding-right: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
+  max-height: 40vh;
+  overflow-y: scroll;
 }
 
 .songs-container {
@@ -69,7 +71,6 @@
   list-style-type: none;
   margin-top: 30px;
   padding-left: 0px;
-  overflow-y: scroll;
 }
 
 .none {
