--- a/src/components/MusicListItem/index.css
+++ b/src/components/MusicListItem/index.css
@@ -1,6 +1,11 @@
 .list-items {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 15px;
+}
+
+.image-text {
+  display: flex;
 }
 
 .image {
@@ -26,10 +31,16 @@
   align-self: flex-start;
 }
 
+.button-time {
+  display: flex;
+}
+
 .time {
   color: #ffffff;
   font-family: 'Roboto';
   font-size: 16px;
+  margin-top: 3px;
+  margin-right: 35px;
 }
 
 .button {
